# TestDnn

./: .gitmodules  LICENSE  README.md  build.sh
prj/cmake/: CMakeLists.txt
prj/vs2022/: TestDnn.sln  TestDnn.vcxproj  TestDnn.vcxproj.filters
src/TestDnn/: ConvParam.h  Dnnl.h  Options.h  Perf.h  Tensor.h  TestConvolution16b.cpp  TestConvolution32f.cpp  TestDnn.cpp  Types.h
