cmake_minimum_required(VERSION 2.8)
project(TestDnn)

set(ROOT_DIR ${CMAKE_SOURCE_DIR}/../..)
set(3RD_DIR ${ROOT_DIR}/3rd)

include_directories(${3RD_DIR}/Cpl/src)

set(SIMD_AVX512 ON CACHE BOOL "" FORCE)
set(SIMD_AVX512VNNI ON CACHE BOOL "" FORCE)
set(SIMD_AMXBF16 ON CACHE BOOL "" FORCE)
set(SIMD_TEST OFF CACHE BOOL "" FORCE)
set(SIMD_SHARED ON CACHE BOOL "" FORCE)
set(SIMD_GET_VERSION OFF CACHE BOOL "" FORCE)
set(SIMD_TOOLCHAIN ${CMAKE_CXX_COMPILER})
set(SIMD_INFO OFF "" FORCE)
set(SIMD_SYNET ON "" FORCE)
set(SIMD_PYTHON OFF "" FORCE)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
include_directories(${3RD_DIR}/Simd/src)
add_subdirectory(${3RD_DIR}/Simd/prj/cmake Simd)

file(GLOB_RECURSE TEST_DNN_SRC ${ROOT_DIR}/src/TestDnn/*.cpp)
add_executable(TestDnn ${TEST_DNN_SRC})
target_link_libraries(TestDnn Simd -lpthread)